[package]
name = "sweet_land"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy = "0.10.0"
bevy_rapier3d = "0.21.0"
bevy_mod_picking = "0.12"
heron = { version = "5.0.2", features = ["3d"] }

[workspace]
resolver = "2" #cargo workspaces

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3
